--- a/src/globals.css
+++ b/src/globals.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
-@theme {
+:root {
 	/* Brand Colours */
 	--color-primary-25: hsl(100, 10%, 94%);
 	--color-primary-50: hsl(108, 12%, 83%);
@@ -38,4 +38,49 @@
 	--color-success: hsl(164, 100%, 29%);
 	--color-success-light: hsl(184, 100%, 36%);
 	--color-success-bg: hsl(162, 71%, 97%);
+}
+
+@theme {
+	/* Brand Colours */
+	--color-primary-25: var(--color-primary-25);
+	--color-primary-50: var(--color-primary-50);
+	--color-primary-100: var(--color-primary-100);
+	--color-primary-200: var(--color-primary-200);
+	--color-primary-300: var(--color-primary-300);
+	--color-primary-400: var(--color-primary-400);
+	--color-primary: var(--color-primary);
+	--color-primary-600: var(--color-primary-600);
+	--color-primary-700: var(--color-primary-700);
+	--color-primary-750: var(--color-primary-750);
+	--color-primary-800: var(--color-primary-800);
+	--color-primary-900: var(--color-primary-900);
+
+	/* Neutral Colors */
+	--color-off-white: var(--color-off-white);
+	--color-gray-100: var(--color-gray-100);
+	--color-gray-200: var(--color-gray-200);
+	--color-gray-300: var(--color-gray-300);
+	--color-gray-400: var(--color-gray-400);
+	--color-gray-500: var(--color-gray-500);
+	--color-gray-600: var(--color-gray-600);
+	--color-gray-700: var(--color-gray-700);
+	--color-gray-800: var(--color-gray-800);
+	--color-gray-900: var(--color-gray-900);
+	--color-dark-grey: var(--color-dark-grey);
+
+	/* State Colors */
+	--color-error: var(--color-error);
+	--color-error-light: var(--color-error-light);
+	--color-error-bg: var(--color-error-bg);
+	--color-warning: var(--color-warning);
+	--color-warning-light: var(--color-warning-light);
+	--color-warning-bg: var(--color-warning-bg);
+	--color-success: var(--color-success);
+	--color-success-light: var(--color-success-light);
+	--color-success-bg: var(--color-success-bg);
+}
+
+body {
+	font-family: Montserrat;
+	color: hsl(0, 0%, 5%);
 }
