--- a/src/components/Sustain/Sustain.module.css
+++ b/src/components/Sustain/Sustain.module.css
@@ -4,4 +4,8 @@
 	background-size: cover;
 	width: 100%;
 	height: 600px;
+
+	@media (max-width: 900px) {
+		background-image: url("../../assets/MobileSustainability.png");
+	}
 }
