--- a/src/components/Landing/Hero/Hero.module.css
+++ b/src/components/Landing/Hero/Hero.module.css
@@ -1,5 +1,5 @@
 .section {
-	background-image: url("../../assets/Hero/Hero.png");
+	background-image: url("../../../assets/Hero/Hero.png");
 	background-repeat: no-repeat;
 	background-size: cover;
 	width: 100%;
