--- a/src/components/Landing/Hero/Hero.module.css
+++ b/src/components/Landing/Hero/Hero.module.css
@@ -6,6 +6,6 @@
 	height: 600px;
 
 	@media (max-width: 900px) {
-		background-image: url("../../assets/Hero/MobileHero.png");
+		background-image: url("../../../assets/Hero/MobileHero.png");
 	}
 }
