--- a/src/sections/Sustain/Sustain.module.css
+++ b/src/sections/Sustain/Sustain.module.css
@@ -1,11 +1,11 @@
 .section {
-	background-image: url("../../../assets/Sustainability.png");
+	background-image: url("../../assets/Sustainability.png");
 	background-repeat: no-repeat;
 	background-size: cover;
 	width: 100%;
 	height: 600px;
 
 	@media (max-width: 900px) {
-		background-image: url("../../../assets/MobileSustainability.png");
+		background-image: url("../../assets/MobileSustainability.png");
 	}
 }
