--- a/frontend/src/globals.css
+++ b/frontend/src/globals.css
@@ -84,7 +84,7 @@
 	--font-primary: "Gill Sans MT";
 	--font-secondary: "Montserrat";
 
-	--breakpoint-lg: 1100px;
+	--breakpoint-lg: 68.75rem;
 }
 
 body {
