--- a/frontend/src/globals.css
+++ b/frontend/src/globals.css
@@ -96,3 +96,13 @@ body {
 input {
 	outline: none;
 }
+
+.scroll-container {
+	scrollbar-width: thin;
+	scrollbar-color: rgba(100, 100, 100, 0.4) transparent;
+}
+
+.scroll-container::-webkit-scrollbar-thumb {
+	background-color: rgba(100, 100, 100, 0.4);
+	border-radius: 6px;
+}
